Bug 286671 - htmlreplies: "your message from ..." has many linebreaks in it
Summary: htmlreplies: "your message from ..." has many linebreaks in it
Status: RESOLVED FIXED
Alias: None
Product: kdepim
Classification: Applications
Component: messagecomposer (other bugs)
Version First Reported In: GIT (master)
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-15 11:00 UTC by simon
Modified: 2011-11-19 19:11 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description simon 2011-11-15 11:00:30 UTC
Version:           GIT (master) (using Devel) 
OS:                Linux

hi,

the new htmlreply breaks the templates as linebreaks are inserted after each token (?)




Reproducible: Always

Steps to Reproduce:
reply to a html mail

Actual Results:  
on
date
you
wrote:

Expected Results:  
on date you wrote:
Comment 1 Torgny Nyblom 2011-11-19 19:11:37 UTC
Git commit fac12d2dc2f7826d5be000f35286702d9b1420f6 by Torgny Nyblom.
Committed on 19/11/2011 at 20:06.
Pushed by tnyblom into branch 'master'.

Don't wrap all parts in <p></p>

BUG: 286671

M  +0    -1    templateparser/templateparser.cpp

http://commits.kde.org/kdepim/fac12d2dc2f7826d5be000f35286702d9b1420f6