Don't wrap all parts in <p></p>

BUG: 286671